# ai-fashion-trends

./: .gitignore  README.md  config.yaml  pyproject.toml  run.sh  streamlit_app.py
data/features/trend_timeseries/: features.csv  features_from_processed.csv
data/predictions/: metrics.csv  metrics_from_processed.csv  predictions.csv  predictions_from_processed.csv
data/processed/: tag_dictionary.jsonl  trends.jsonl
data/processed/news_cleaned/: cleaned.csv
data/raw/news/: mock_raw.csv
data/synthetic/: daily_trends_2y.csv  future_truth.csv  history_features.csv  metrics_ets.csv  predictions_ets.csv
pages/: 2_Makeup_classifier.py
src/ai_fashion_trends/: __init__.py  __main__.py  data_ingestion.py  evaluation.py  features.py  forecasting.py  forecasting_advanced.py  pipeline.py  streamlit_data.py  synthetic_series.py  tag_dictionary.py  text_mining.py
src/ai_fashion_trends/ingestion/: __init__.py  checkpoint.py  llm.py  pipeline.py  schema.py  storage.py
src/ai_fashion_trends/ingestion/sources/: __init__.py  base.py  google_trends.py  rss.py  web_scraper.py
src/ai_fashion_trends/processing/: __init__.py  processor.py  prompts.py  schema.py
src/ai_fashion_trends/vision/: __init__.py  face.py  features.py  makeup_data.py  mock_classifier.py  pair_classifier.py  pipeline.py  schema.py  torch_makeup.py  train_makeup_pair.py
