[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-fashion-trends"
version = "0.1.0"
description = "Прогнозирование модных трендов с помощью ИИ-агентов"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.28",
]

[project.scripts]
ai-fashion-trends = "ai_fashion_trends.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
